@@ -335,6 +335,9 @@ Release 2.8.0 - UNRELEASED
     HDFS-9626. TestBlockReplacement#testBlockReplacement fails occasionally.
     (Xiao Chen via zhz)
 
+    HDFS-9493. Test o.a.h.hdfs.server.namenode.TestMetaSave fails in trunk.
+    (Tony Wu via lei)
+
 Release 2.7.3 - UNRELEASED
     HDFS-10623. Remove unused import of httpclient.HttpConnection from
     TestWebHdfsTokens. (Hanish Koneru via Arpit Agarwal)
